themes/default/css/adminzone_dashboard.css
/*
 {$BRAND_NAME`}
 Copyright (c) ocProducts, 2004-2022
*/

/* Checklist */

a.top-left-toggle {
	color: {$GET,slightly_seeded_pale_text};
	padding: 1px 0 5px 10px !important;
	font-size: 0.8em;
	float: left;
	opacity: 0.7;
}

a.top-left-toggle:hover {
	opacity: 1.0;
}

a.top-left-toggle .icon {
	width: 20px;
	height: 20px;
	margin-right: 0.3em;
}

.checklist-header {
	color: {$GET,slightly_seeded_text};
	font-size: 1.1em;
	border-bottom: 1px solid {$GET,pale_border};
	margin-top: 15px;
	margin-bottom: 10px;
}

.checklist-row {
	border: 1px solid {$GET,pale_border};
	padding: 0.2em;
	background-color: {$GET,main_background};
}
.checklist-row:hover {
	background-color: {$GET,area_hover_2_background};
}
.checklist-row+.checklist-row {
	border-top-width: 0;
}
.task-hidden+.checklist-row {
	border-top-width: 1px !important;
}

.checklist-task {
	margin: 0.3em 0 0.5em 0.5em;
}

.checklist-task > span {
	display: inline-block;
	width: calc(100% - 18em);
}

.checklist-task > * {
	vertical-align: middle;
}

.checklist-task-status {
	font-size: 0.85em;
	margin: 0.3em 0.5em 0.3em 0;
	float: right;
}

.checklist-task-status img, .checklist-task-status span {
	vertical-align: middle;
}

.checklist-delete {
	opacity: 0.7;
}
.checklist-delete:hover {
	opacity: 1.0;
}

.add-custom-task {
	margin-top: 0.5em;
	border: 1px solid {$GET,pale_border};
	padding: 0.2em;
	font-size: 0.9em;
	overflow: hidden;
}

#recur-interval {
	width: 3em;
}

/* Tips */

.tips-trail {
	bottom: 5px;
	left: 15px;
}

/* New version indicator */
.staff-new-versions {
}

.staff-new-versions p {
	margin: 1em 0;
}

.staff-new-versions .notes-about,
.staff-new-versions .notes_about { /* .notes_about comes from the compo.sr server */
	display: none;
}

.staff-new-versions .version {
	margin: 0.5em 0;
	padding: 0.3em;
	border: 1px solid {$GET,standard_border};
	background-color: {$GET,area_background};
	overflow: hidden;
	position: relative;
}

.staff-new-versions .version-number {
	font-weight: bold;
	color: {$GET,area_text};
	font-size: 1.2em;
}

.staff-new-versions .version-news-link {
	float: right;
	margin-right: 1em;
}

.staff-new-versions .version-help-icon {
	position: absolute;
	bottom: 5px;
	right: 5px;
}

.staff-new-versions .version-details {
	margin-top: 0.61em; /* 0.61 to workaround weird bug where border for surrounding box was disappearing */
	float: left;
	width: 100%;
}

.staff-new-versions .red-alert {
	margin-bottom: 1em;
}

.staff-new-versions .img-wrap {
}
.staff-new-versions .img-wrap img {
	width: auto;
	height: 90px;
}
/*{+START,CSS_MODE,mobile}*/
	.staff-new-versions .img-wrap {
		display: none;
	}
/*{+END}*/

.staff-new-versions .img-wrap img:not([width]):not([height]) {
	max-width: 100%;
	height: auto;
}

/* Action log */

.action-log-filters {
	margin-bottom: 0.5em;
	overflow: hidden;
}

.action-log-filter-part {
	float: left;
	margin-right: 1em;
}

.action-log-filter-part * {
	vertical-align: middle;
}

.action-log-filter-part + .action-log-filter-part {
	padding-top: 0.2em;
}

